--- a/index.html
+++ b/index.html
@@ -1620,5 +1620,9 @@
             changeLanguage();
         });
     </script>
+    <footer class="text-center text-xs text-gray-500 mt-8">
+  © 2024 Futures Unlocked | Developed by Neepa H.
+</footer>
+
 </body>
 </html>
