--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@
     </script>
     
     <footer class="text-center text-xs text-gray-500 mt-8">
-  © 2024 Futures Unlocked | Developed by Neepa H.
+  © 2025 Futures Unlocked | Developed by S.N.Hekim
 </footer>
 
 </body>
